Fix the stacking order for the Media & Text block on mobile and add other minor styling fixes

--- a/sass/blocks/_blocks.scss
+++ b/sass/blocks/_blocks.scss
@@ -763,12 +763,30 @@
 			}
 		}
 
+
+		&.has-media-on-the-right.is-stacked-on-mobile {
+			.wp-block-media-text__media {
+				grid-area: media-text-content;
+			}
+			.wp-block-media-text__content {
+				grid-area: media-text-media;
+			}
+		}
+
 		@include media(mobile) {
-			&:before{
+			&:before {
 				top: 5.6%;
 				height: 88.8%;
 			}
 
+			&.has-media-on-the-right.is-stacked-on-mobile {
+				.wp-block-media-text__media {
+					grid-area: media-text-media;
+				}
+				.wp-block-media-text__content {
+					grid-area: media-text-content;
+				}
+			}
 		}
 
 		@include media(tablet) {
